--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Barcos Navales</title>
-  <link rel="stylesheet" href="paginaes.css" />
+  <link rel="stylesheet" href="styles.css"/>
   <style>
     .info {
       display: none;
