--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Hoy en día, los portaaviones nucleares como el **USS Gerald R. Ford**, los dest
     <section class="video">
       <h2>Video sobre barcos navales</h2>
       <video width="560" height="315" controls>
-        <source src="videoplayback (1).mp4" type="video/mp4">
+        <source src="videoplayback.mp4" type="video/mp4">
         Tu navegador no soporta la etiqueta de video.
       </video>
     </section>
