--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h1>Explorando los Barcos Navales</h1>
     <nav>
       <ul>
-        <li><a href="https://poki.com/es/g/fury-warship" target="_blank">Ir al juego</a></li>
+        <li><a href="https://poki.com/es/g/fury-warship" target="_blank">pasaun rato con un videojuego</a></li>
       </ul>
     </nav>
   </header>
@@ -71,7 +71,7 @@ Hoy en día, los portaaviones nucleares como el **USS Gerald R. Ford**, los dest
     </section>
 
     <section class="video">
-      <h2>Video sobre barcos navales</h2>
+      <h2>tipos de barcos👍</h2>
       <video width="560" height="315" controls>
         <source src="videoplayback.mp4" type="video/mp4">
         Tu navegador no soporta la etiqueta de video.
