--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h1>Explorando los Barcos Navales</h1>
     <nav>
       <ul>
-        <li><a href="https://poki.com/es/g/fury-warship" target="_blank">pasaun rato con un videojuego</a></li>
+        <li><a href="https://poki.com/es/g/fury-warship" target="_blank">jugar un raton vaquero👌</a></li>
       </ul>
     </nav>
   </header>
