--- a/index.html
+++ b/index.html
@@ -964,7 +964,7 @@
                                        class= "pay-option"
                                        name="discount" 
                                        id="discount"/> 
-                                       Tengo tarjeta de descuento
+                                       cliente
                             </label>
                         </div>
                     </fieldset>
@@ -999,7 +999,7 @@
                 Seguir comprando
             </button>
             <button type="button" class="btn-finish-buy button button-simple-solid-reverse">
-                Finalizar
+                realizar pago
             </button>
         </footer>
     </div>
