--- a/servicios.html
+++ b/servicios.html
@@ -6,7 +6,7 @@
   <title>Servicios al Cliente</title>
   <link rel="stylesheet" href="servicios.css" />
 
-  <script type="text/javascript" src="https://cdn.kiritonikens9@gmail.com/dist/email.min.js"></script>
+  <script type="text/javascript" src="https://kiritonikens9@gmail.com/dist/email.min.js"></script>
   <script>
     (function(){
       emailjs.init("J_CornKAiEa1Yy82-"); 
