--- a/servicios.html
+++ b/servicios.html
@@ -16,6 +16,7 @@
     <div id="contact-form-modal" class="contact-modal">
       <div class="contact-modal-content">
         <span class="close-contact-modal" id="close-contact-modal-btn">&times;</span>
+                  <button onclick="window.location.href='index.html'">Regresar al Inicio</button>
         <h2>Contáctame</h2>
         <p>Envíame un mensaje y te responderé lo antes posible.</p>
         
